{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 144,
  "lineage": "8982acad-f4c5-9d3e-8b11-604ccf748bf3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:689880272610:security-group/sg-05146b9468449b3d7",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05146b9468449b3d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "689880272610",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-001e1ac57f69a49af"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cb2a7f270d88c643",
            "domain": "vpc",
            "id": "eipalloc-07d29c08cf13563cd",
            "instance": "i-0df78cc4935776598",
            "network_interface": "eni-0d174499cfe7112d5",
            "private_dns": "ip-10-0-1-101.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-18-181-3-129.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.181.3.129",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app",
            "aws_key_pair.isucon_key",
            "aws_network_interface.private_ip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05c92b61ec49e01e3",
            "domain": "vpc",
            "id": "eipalloc-0f43c3b7b7f58a98d",
            "instance": "i-024db3f1f23a9885f",
            "network_interface": "eni-030ad4f7d6d6adc9e",
            "private_dns": "ip-10-0-1-102.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.102",
            "public_dns": "ec2-54-248-145-108.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.248.145.108",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app",
            "aws_key_pair.isucon_key",
            "aws_network_interface.private_ip"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0042e6512f4c2b5cf",
            "domain": "vpc",
            "id": "eipalloc-087624f98b4b244f3",
            "instance": "i-095ef38579a391676",
            "network_interface": "eni-01267f1e3b0c98a16",
            "private_dns": "ip-10-0-1-103.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-54-248-3-218.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.248.3.218",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app",
            "aws_key_pair.isucon_key",
            "aws_network_interface.private_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cfa3caed4b487e77",
            "arn": "arn:aws:ec2:ap-northeast-1:689880272610:instance/i-0df78cc4935776598",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df78cc4935776598",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "isucon-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0d174499cfe7112d5"
              }
            ],
            "primary_network_interface_id": "eni-0d174499cfe7112d5",
            "private_dns": "ip-10-0-1-101.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-18-181-3-129.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.181.3.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0eadd5dab99b2a941",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054c80d46701dbf40",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05146b9468449b3d7"
            ]
          },
          "dependencies": [
            "aws_key_pair.isucon_key",
            "aws_network_interface.private_ip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cfa3caed4b487e77",
            "arn": "arn:aws:ec2:ap-northeast-1:689880272610:instance/i-024db3f1f23a9885f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024db3f1f23a9885f",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "isucon-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-030ad4f7d6d6adc9e"
              }
            ],
            "primary_network_interface_id": "eni-030ad4f7d6d6adc9e",
            "private_dns": "ip-10-0-1-102.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.102",
            "public_dns": "ec2-54-248-145-108.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.248.145.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fd87e816883b769c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054c80d46701dbf40",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05146b9468449b3d7"
            ]
          },
          "dependencies": [
            "aws_key_pair.isucon_key",
            "aws_network_interface.private_ip"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cfa3caed4b487e77",
            "arn": "arn:aws:ec2:ap-northeast-1:689880272610:instance/i-095ef38579a391676",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095ef38579a391676",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "isucon-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-01267f1e3b0c98a16"
              }
            ],
            "primary_network_interface_id": "eni-01267f1e3b0c98a16",
            "private_dns": "ip-10-0-1-103.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-54-248-3-218.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.248.3.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-088fbb4bd2c0956b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054c80d46701dbf40",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05146b9468449b3d7"
            ]
          },
          "dependencies": [
            "aws_key_pair.isucon_key",
            "aws_network_interface.private_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:689880272610:internet-gateway/igw-0a7dcf69d05b24e32",
            "id": "igw-0a7dcf69d05b24e32",
            "owner_id": "689880272610",
            "tags": {
              "Name": "isucon-igw"
            },
            "vpc_id": "vpc-001e1ac57f69a49af"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private_ip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0709503651bec9412",
                "device_index": 0,
                "instance": "i-0d98b56d6d0fdc1d3"
              }
            ],
            "id": "eni-0d174499cfe7112d5",
            "mac_address": "06:79:b3:28:d3:a2",
            "private_dns_name": "ip-10-0-1-101.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.101",
            "private_ips": [
              "10.0.1.101"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05146b9468449b3d7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054c80d46701dbf40",
            "tags": {
              "Name": "private-network-interface"
            }
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0eb8c06c55646b552",
                "device_index": 0,
                "instance": "i-08a303bfaf085cce1"
              }
            ],
            "id": "eni-030ad4f7d6d6adc9e",
            "mac_address": "06:ba:7b:b9:71:c6",
            "private_dns_name": "ip-10-0-1-102.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.102",
            "private_ips": [
              "10.0.1.102"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05146b9468449b3d7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054c80d46701dbf40",
            "tags": {
              "Name": "private-network-interface"
            }
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-05fd908087a76668e",
                "device_index": 0,
                "instance": "i-09d6f999a16309ced"
              }
            ],
            "id": "eni-01267f1e3b0c98a16",
            "mac_address": "06:e8:b3:b5:93:dc",
            "private_dns_name": "ip-10-0-1-103.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.103",
            "private_ips": [
              "10.0.1.103"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05146b9468449b3d7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054c80d46701dbf40",
            "tags": {
              "Name": "private-network-interface"
            }
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ed74b69f481dffcc",
            "owner_id": "689880272610",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7dcf69d05b24e32",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "isucon-route-table-public"
            },
            "vpc_id": "vpc-001e1ac57f69a49af"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "local",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a57a26e4edd47553",
            "route_table_id": "rtb-0ed74b69f481dffcc",
            "subnet_id": "subnet-054c80d46701dbf40"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:689880272610:subnet/subnet-054c80d46701dbf40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-054c80d46701dbf40",
            "map_public_ip_on_launch": false,
            "owner_id": "689880272610",
            "tags": {
              "Name": "public-1a"
            },
            "vpc_id": "vpc-001e1ac57f69a49af"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:689880272610:vpc/vpc-001e1ac57f69a49af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c5cdeb246938dab9",
            "default_route_table_id": "rtb-0f52f5ae132b1575b",
            "default_security_group_id": "sg-05146b9468449b3d7",
            "dhcp_options_id": "dopt-d40229b3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-001e1ac57f69a49af",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f52f5ae132b1575b",
            "owner_id": "689880272610",
            "tags": {
              "Name": "isucon-vpc"
            }
          }
        }
      ]
    }
  ]
}